third_party/move/move-compiler-v2/tests/folding/constants_single_quote.move
address 0x42 {
module M {
    fun u(): u64 { 0 }
    const C13: vector<u8> = "foo
    ";
    const C14: vector<u8> = "bar";
    const C15: vector<u8> = b"baz";
    const C16: vector<u8> = x"quux";
}
}
